fixed tiles content overflow

--- a/SCSS/_works.scss
+++ b/SCSS/_works.scss
@@ -464,7 +464,7 @@ background-size: 100% 100%;
 .tiles-wrapper{
     display: grid;
     grid-template-columns:repeat(2, 1fr);
-    grid-template-rows: 1fr 2fr 3fr;
+    grid-template-rows: auto 2fr 3fr;
     grid-column-gap: 0px;
     grid-row-gap: 5px;
 
@@ -560,6 +560,7 @@ background-size: 100% 100%;
 .highlights{
     
     grid-area: 1 / 1 / 3 / 2; 
+    overflow: auto;
     justify-self: end;
 
     .text-wrapper{
